attempting fix for grid project touch on mobile

--- a/src/styles/components/_about.scss
+++ b/src/styles/components/_about.scss
@@ -7,6 +7,8 @@
 		position: absolute;
 		padding-top: 100px;
 		padding-bottom: 100px;
+		padding-left: 10px;
+		padding-right: 10px;
 
 		h2 {
 			font-weight: 400;
